--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
         <td>Task 3</td>
         <td><a href="task3.html">Task 3 link</a></td>
       </tr>
+      <tr>
+        <td>Task 4</td>
+        <td><a href="task4.html">Task 3 link</a></td>
+      </tr>
     </table>
   </body>
 </html>
